Bug 259661 - [WGSL] Unterminated block comments crash the lexer
Summary: [WGSL] Unterminated block comments crash the lexer
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-07-31 14:19 PDT by Tadeu Zagallo
Modified: 2023-08-01 08:52 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2023-07-31 14:19:04 PDT
...
Comment 1 Radar WebKit Bug Importer 2023-07-31 14:19:21 PDT
<rdar://problem/113161516>
Comment 2 Tadeu Zagallo 2023-07-31 14:38:34 PDT
Pull request: https://github.com/WebKit/WebKit/pull/16244
Comment 3 EWS 2023-08-01 08:52:58 PDT
Committed 266476@main (65d409260e76): <https://commits.webkit.org/266476@main>

Reviewed commits have been landed. Closing PR #16244 and removing active labels.